<resources>
    <string name="app_name" translatable="false">FinalProjectSamsungTT</string>
    <string name="root_email" translatable="false">root@admin.com</string>
    <string name="root_password" translatable="false">Root</string>
    <string name="account">Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="product">Product</string>
    <string name="login">Login</string>
    <string name="log_out">Log Out</string>
    <string name="register">Register</string>
    <string name="save">save</string>
    <string name="view">view</string>
    <string name="edit">edit</string>
    <string name="sort">sort</string>
    <string name="delete">delete</string>
    <string name="order">order</string>
    <string name="all">all categories</string>
    <string name="acc_not_found">Account not found</string>
    <string name="wrong_pass">Wrong Password</string>
    <string name="is_root">isRoot</string>
    <string name="fill_form">please, fill the form completely</string>
    <string name="email_exists">Email already exists</string>
    <string name="not_same_pas">Please confirm your Password correctly</string>
    <string name="not_url">Please write a valid URL</string>
    <string name="admin_text">Choose your action</string>
    <string name="admin_login">You are an admin</string>
    <string name="add_admins_text">Add and Remove Admins</string>
    <string name="add_products">Add a Product</string>
    <string name="update_products">Update Products</string>
    <string name="delete_products">Delete Products</string>
    <string name="add_products_category">Choose the Category of the Product</string>
    <string name="product_name">Name of the Product</string>
    <string name="product_price">Price of the Product</string>
    <string name="product_description">Description of the Product</string>
    <string name="product_image">Insert the URL of your Image</string>
    <string name="product_added">Your Product was added Successfully</string>
    <string name="login_text">LOGIN TO YOUR ACCOUNT</string>
    <string name="register_text">REGISTER</string>
    <string name="add_console">Add a Gaming Console</string>
    <string name="add_accessory">Add an Accessory</string>
    <string name="add_game">Add a VideoGame</string>
    <string name="category">Category</string>
    <string name="console">Gaming Console</string>
    <string name="accessory">Accessory</string>
    <string name="game">VideoGame</string>
    <string name="main_activity_text">Welcome, you are successfully logged in to your Account</string>
    <string name="gallery">go to gallery</string>
    <string name="cart">cart</string>
    <string name="wishlist">wishlist</string>
    <string name="total">total</string>
    <string name="account_settings">Account Settings</string>
    <string name="gallery_text">Gallery</string>
    <string name="add_to_cart">add to cart</string>
    <string name="added_to_cart">added to cart</string>
    <string name="add_to_wishlist">add to wishlist</string>
    <string name="remove_from_cart">remove from cart</string>
    <string name="remove_from_wishlist">remove from wishlist</string>
    <string name="confirm_text">Please Confirm Your Address</string>
    <string name="confirm">confirm</string>
    <string name="no_address">Address not assigned</string>
    <string name="cart_empty">Your Cart is empty</string>
    <string name="order_delivered">Enjoy your Order</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="sure_add_to_cart">Add to Cart?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="quantity">Quantity</string>
    <string name="checkout">CheckOut</string>
    <string name="total_price">Total Price</string>
    <string name="address">Address</string>
    <string name="update_your_info">Update your info</string>
    <string name="history">History</string>
    <string name="remember_me">Remember Me</string>
    <string name="show_password">Show Password</string>
</resources>