<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_baseline_search_24"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/cart"
        android:title="@string/cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/gallery"
        android:title="@string/gallery"
        app:showAsAction="never" />

    <item
        android:id="@+id/wishlist"
        android:title="@string/wishlist"
        app:showAsAction="never" />

    <item
        android:id="@+id/history"
        android:title="@string/history"
        app:showAsAction="never" />

    <item
        android:id="@+id/accountSettings"
        android:title="@string/account_settings"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/logOut"
        android:title="@string/log_out"
        app:showAsAction="never" />

</menu>