<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/navbar"
        android:title="@string/navbar"
        android:icon="@drawable/ic_baseline_dehaze_24"
        app:showAsAction="ifRoom|collapseActionView">

        <menu
            tools:showIn="navigation_view">

            <item
                android:id="@+id/gallery"
                android:title="@string/gallery"
                android:icon="@drawable/ic_baseline_videogame_asset_24" />

            <item
                android:id="@+id/cart"
                android:title="@string/cart"
                android:icon="@drawable/ic_baseline_shopping_cart_24" />

            <item
                android:id="@+id/wishlist"
                android:title="@string/wishlist"
                android:icon="@drawable/ic_baseline_favorite_border_24" />

            <item
                android:id="@+id/history"
                android:title="@string/history"
                android:icon="@drawable/ic_baseline_history_24" />

            <item
                android:id="@+id/accountSettings"
                android:title="@string/account_settings"
                android:icon="@drawable/ic_baseline_manage_accounts_24" />

            <item
                android:id="@+id/logOut"
                android:title="@string/log_out"
                android:icon="@drawable/ic_baseline_logout_24" />

        </menu>

    </item>

</menu>